# BuildGoForAndroid

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/top/kikt/usegolibrary/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/top/kikt/usegolibrary/: JniLibrary.java  MainActivity.kt
app/src/main/jni/: jni.c  libadd.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/top/kikt/usegolibrary/: ExampleUnitTest.kt
go/: add_library.go  build_android.sh  build_android_on_mac.sh  build_macos.sh
gradle/wrapper/: gradle-wrapper.properties
